# RayTracingInRust

./: .gitignore  Cargo.toml  README.md  image.ppm
cli/: Cargo.toml
cli/src/: main.rs
images/: image.ppm
rust_ray_tracing/: Cargo.toml
rust_ray_tracing/src/: lib.rs
rust_ray_tracing/src/models/: aabb.rs  camera.rs  color.rs  cube.rs  hittable.rs  hittable_list.rs  material.rs  mod.rs  point.rs  ray.rs  rect.rs  renderer.rs  sphere.rs  util.rs
src/: main.rs
src/models/: camera.rs  hittable.rs  hittable_list.rs  material.rs  mod.rs  point3.rs  ray.rs  sphere.rs
wasm/: Cargo.toml  Dockerfile  build.sh  index.html  index.js  package.json  raytrace_parallel.d.ts  raytrace_parallel.js  raytrace_parallel_bg.wasm  raytrace_parallel_bg.wasm.d.ts  server.py
wasm/src/: lib.rs
