[package]
name = "rust_ray_tracing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.37"
tokio = "1.22.0"
color-eyre = "0.6.2"
log = "0.4.17"
log4rs = "1.2.0"
result = "1.0.0"
nalgebra = "0.31.0"
